[package]
name = "loopadoodle"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
regex = "1"
rocket = { version = "0.5.0-rc.2", features = ["tls", "json"] }
rocket-include-static-resources = "0.10.2"
simple-xml-builder = "1.1.0"
dropbox-sdk = "0.15.0"
